Alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1019,7 +1019,7 @@
   margin: 0 1rem;
   border-radius: 20px;
   margin-bottom: 2rem;
-  width: calc(100% - 2rem);
+  width: calc(100% - 1rem);
   overflow: hidden;
 }
 
@@ -1374,6 +1374,7 @@
   .nav-item {
     flex: 1 1 auto;
     min-width: 0;
+    text-align: center;
   }
   
   .nav-item:last-child {
